--- a/mobile.css
+++ b/mobile.css
@@ -53,14 +53,24 @@
 
 }
 
-@media (max-width: 420px) {
-    .btn-wrap {
-      display: flex;
-      flex-direction: column;
-    }
-    .btn {
-      margin-bottom: 1em;
-    }
+@media (max-width: 768px) {
+  .container-about, .port-content, .skill-set {
+    grid-template-columns: 1fr;
   }
+  
+  .h1 {
+    font-size: 2.5rem;
+    line-height: 3rem;
+  }
+  
+  .nav-ul {
+    padding-top: 3rem;
+  }
+  
+  .btn {
+    padding: 0.75rem 1.5rem;
+    font-size: 1rem;
+  }
+}
 
 
