--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ header {
   .hamburger.active .bar:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
   }
+  
 
   /* ABOUT ME CONTAINER*/
 
@@ -277,10 +278,12 @@ h4 {
     transition: all 0.3s ease;
 }
 
+
 .port-content .port-card:hover{
     background-color: #323232;
     border-color: #fff;
 }
+
 
 .port-content .port-card span{
     display: inline-block;
@@ -311,7 +314,19 @@ h4 {
 .port-content .card a:hover{
     color: #1e40af;
 }
+.port-card:hover {
+  transform: translateY(-10px);
+}
+/*New */
 
+.port-card, .btn, .contact-info-upper-container {
+  border-radius: 10px;
+  box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+}
+.btn, .port-card, .nav-a {
+  transition: all 0.3s ease;
+}
+/*New */
 
 /* FOOTER */
 .footer{
@@ -377,7 +392,16 @@ h4 {
   text-decoration-color: rgb(181, 181, 181);
   }
 
+  /*Back to top*/
 
+  #backToTop {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    z-index: 100;
+  }
+  
   /* REUSABLE */
   .nav-container {
     max-width: 80em;
@@ -390,6 +414,7 @@ h4 {
     justify-content: space-around;
     align-items: center;
   }
+
 
 
   
